# koudaisai-portal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  project.json  setup.sh  tsconfig.base.json  tsconfig.json
.github/workflows/: publish.yml
.nx/: nxw.js
admin/: .gitignore  next.config.ts  package-lock.json  package.json
apps/backend/: Cargo.toml  docker-compose.yml  private-key.pem  project.json
apps/web-admin/: eslint.config.mjs  next.config.mjs  package.json  project.json  tsconfig.json
apps/web-members/: .env.development  next.config.ts  package.json  tsconfig.json
backend/: .gitignore  Cargo.toml
backend/src/: forms.rs  main.rs  middlewares.rs  routes.rs
debug/: docker-compose.yml  public-key.pem
debug/config/: default-config.toml
docs/: build.sh  bundle.sh  update_clients.sh
docs/api/: api.yml  forms.yml  openapi.yml
docs/api_v1/: openapi.yml
docs/auth_v1/: openapi.yml
koudaisai-portal-admin/: next.config.ts  package-lock.json  package.json
koudaisai-portal-backend/: Cargo.toml  README.md  exhibitors_root.rs  mod.rs  sea_orm_active_enums.rs  users.rs
koudaisai-portal-backend/migration/: Cargo.toml
koudaisai-portal-backend/migration/src/: lib.rs  m20250203_100228_create_table_users.rs  m20250204_062103_create_table_exhibitors.rs  m20250214_132032_create_table_exhibitors_children.rs  m20250227_173624_create_table_forms.rs  m20250227_191323_create_table_form_items.rs  m20250227_191436_create_table_form_questions.rs  m20250227_191549_create_table_form_responses.rs
koudaisai-portal-backend/src/: config.rs  db.rs  forms.rs  logging.rs  main.rs  middlewares.rs  routes.rs  util.rs
koudaisai-portal-backend/src/entities/: exhibitors_category_booth.rs  exhibitors_category_general.rs  exhibitors_category_labo.rs  exhibitors_category_stage.rs  exhibitors_root.rs  form_items.rs  form_questions.rs  forms.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
koudaisai-portal-backend/src/forms/: question.rs  responses.rs
koudaisai-portal-backend/src/routes/: api.rs  auth.rs
koudaisai-portal-backend/src/routes/api/: exhibitors.rs  forms.rs
koudaisai-portal-backend/src/util/: jwt.rs  oidc.rs  sha.rs
koudaisai-portal-web/: package-lock.json  package.json
libs/ui-edit_form/: README.md  eslint.config.mjs  package.json  (+4 more)
web/: eslint.config.mjs  next.config.ts  package.json
web-admin/: .env.development  next.config.ts  package-lock.json  package.json
web-core/: package-lock.json  package.json
web-members/: .env.production
(+334 files in other folders)
