[package]
name = "koudaisai-portal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio"] }
pkg-version = "1.0.0"
confy = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = "0.3.19"
axum = "0.8.1"
sha2 = "0.10.8"
uuid = { version = "1.13.1", features = ["v4"] }
rand = "0.9.0"
migration = { path = "migration" }
axum_gcra = { git = "https://github.com/pasmophobia/axum_gcra.git", branch = "axum-0.8" }
