[package]
name = "koudaisai-portal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio", "with-json", "with-uuid", "with-chrono"] }
pkg-version = "1.0.0"
confy = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
axum = { version = "0.8.1", features = ["default", "macros"] }
sha2 = "0.10.8"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
rand = "0.9.0"
migration = { path = "migration" }
axum_gcra = { git = "https://github.com/pasmophobia/axum_gcra.git", branch = "axum-0.8" }
jsonwebtoken = { version = "9.3.1", features = ["default"] }
chrono = "0.4.39"
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
serde_json = "1.0.139"
reqwest = "0.12.12"
http = "1.2.0"
openidconnect = "4.0.0"
oauth2 = "5.0.0"
anyhow = "1.0.97"
